Fix quotes in dark mode

--- a/src/app/posts/[slug]/blogpage.module.css
+++ b/src/app/posts/[slug]/blogpage.module.css
@@ -63,7 +63,6 @@
 }
   
 .postDetails blockquote {
-    background: #f9f9f9;
     border-left: 10px solid #ccc;
     margin: 1.5em 10px;
     padding: 0.5em 10px;
